Home page changes

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 
     <section id="short-story">
       <div class="short-s-cards">
-        <img src="/images/B2Bicon.png">
+        <img src="images/B2Bicon.png">
         <h2>B2B Marketing</h2>
         <p>Experience within the tech industry</p>
       </div>
       <div class="short-s-cards">
-        <img src="/images/JournalistIcon.png">
+        <img src="images/JournalistIcon.png">
         <h2>Journalist</h2>
         <p>Sharing stories digitally and in print</p>
       </div>
       <div class="short-s-cards">
-        <img src="/images/StorytellingScholarIcon.png">
+        <img src="images/StorytellingScholarIcon.png">
         <h2>Storytelling Scholar</h2>
         <p>Master's degree in mass communication</p>
       </div>
@@ -56,21 +56,21 @@
       <h2>Work Experience</h2>
       <div id="work-experience-cards">
         <div class="we-card">
-          <img src="/images/RandLogo.png">
+          <img src="images/RandLogo.png">
           <p>
             I helped build this tech company's branding from the ground up, creating marketing materials, trade show designs, and internal communications—including launching a monthly newsletter that reaches our team across 12 countries.
           </p>
           <a href="">View Work</a>
         </div>
         <div class="we-card">
-          <img src="/images/K2Logo.png">
+          <img src="images/K2Logo.png">
           <p>
             At Utah's most-watched news station, I helped grow our digital presence by developing social media content strategies, producing impactful stories under tight deadlines, and optimizing engagement across platforms.
           </p>
           <a href="">View Work</a>
         </div>
         <div class="we-card">
-          <img src="/images/ASULogo.png">
+          <img src="images/ASULogo.png">
           <p>
             I earned my master's degree in Journalism and Mass Communication from Arizona State University, gaining hands-on experience in innovative news production, multimedia storytelling, and various styles of advanced writing.
           </p>
@@ -149,13 +149,13 @@
         <div class="single-certi">
           <p>Google Analytics</p>
           <a href="https://skillshop.credential.net/e88ec177-6770-43ed-a451-d36ddc1b0ddb#acc.OLPSVGie">
-            <img src="/images/GOOGLE_Analytics-Certi.png">
+            <img src="images/GOOGLE_Analytics-Certi.png">
           </a>
         </div>
         <div class="single-certi">
           <p>Google Ads Search</p>
           <a href="https://skillshop.credential.net/ef4a36a1-1146-41cd-9f8e-3bc0b4c86087#acc.tXGPgnj6">
-            <img src="/images/GOOGLE_Ads-Search-Certi.png">
+            <img src="images/GOOGLE_Ads-Search-Certi.png">
           </a>
         </div>
       </div>
