--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> <!-- link used to connect the website boxicons.com to the HTML -->
   <link rel="stylesheet" href="style.css">
+
   <title>Victoria Hill's Portfolio</title>
 </head>
 
@@ -60,7 +61,7 @@
           <p>
             I helped build this tech company's branding from the ground up, creating marketing materials, trade show designs, and internal communications—including launching a monthly newsletter that reaches our team across 12 countries.
           </p>
-          <a href="">View Work</a>
+          <a href="pages/rand-technology.html">View Work</a>
         </div>
         <div class="we-card">
           <img src="images/K2Logo.png">
