Added Work Experience pages along with styling along w/ work experience page accessed from the header

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </h1>
     <nav>
       <ul>
-        <li><a href="#">Work Experience</a></li>
+        <li><a href="pages/work-experience.html">Work Experience</a></li>
         <li><a href="https://www.linkedin.com/in/victoriaa-hill/"><i class='bx bxl-linkedin'></i></a></li>
-        <li><a href="https://drive.google.com/file/d/1FoQHJfcXrxNrpBgHFAtSJker6TM8D4kI/view?usp=sharing" class="resume-btn">Resume</a></li>
+        <li><a href="https://drive.google.com/file/d/1FoQHJfcXrxNrpBgHFAtSJker6TM8D4kI/view?usp=sharing" class="resume-btn" target="_blank">Resume</a></li>
       </ul>
     </nav>
   </header>
@@ -57,25 +57,25 @@
       <h2>Work Experience</h2>
       <div id="work-experience-cards">
         <div class="we-card">
-          <img src="images/RandLogo.png">
+          <img src="images/RandLogoWhite.png">
           <p>
             I helped build this tech company's branding from the ground up, creating marketing materials, trade show designs, and internal communications—including launching a monthly newsletter that reaches our team across 12 countries.
           </p>
           <a href="pages/rand-technology.html">View Work</a>
         </div>
         <div class="we-card">
-          <img src="images/K2Logo.png">
+          <img src="images/K2LogoWhite.png">
           <p>
             At Utah's most-watched news station, I helped grow our digital presence by developing social media content strategies, producing impactful stories under tight deadlines, and optimizing engagement across platforms.
           </p>
-          <a href="">View Work</a>
+          <a href="pages/kutv-2news.html">View Work</a>
         </div>
         <div class="we-card">
-          <img src="images/ASULogo.png">
+          <img src="images/ASULogoWhite.png">
           <p>
             I earned my master's degree in Journalism and Mass Communication from Arizona State University, gaining hands-on experience in innovative news production, multimedia storytelling, and various styles of advanced writing.
           </p>
-          <a href="">View Work</a>
+          <a href="pages/asu-academic.html">View Work</a>
         </div>
       </div>
     </section>
