--- a/pages/rand-technology.html
+++ b/pages/rand-technology.html
@@ -16,9 +16,9 @@
     </h1>
     <nav>
       <ul>
-        <li><a href="#">Work Experience</a></li>
-        <li><a href="https://www.linkedin.com/in/victoriaa-hill/"><i class='bx bxl-linkedin'></i></a></li>
-        <li><a href="https://drive.google.com/file/d/1FoQHJfcXrxNrpBgHFAtSJker6TM8D4kI/view?usp=sharing" class="resume-btn">Resume</a></li>
+        <li><a href="work-experience.html">Work Experience</a></li>
+        <li><a href="https://www.linkedin.com/in/victoriaa-hill/" target="_blank"><i class='bx bxl-linkedin'></i></a></li>
+        <li><a href="https://drive.google.com/file/d/1FoQHJfcXrxNrpBgHFAtSJker6TM8D4kI/view?usp=sharing" class="resume-btn" target="_blank">Resume</a></li>
       </ul>
     </nav>
   </header>
@@ -69,10 +69,10 @@
           Go-to-market materials
         </h2>
         <a href="https://drive.google.com/file/d/1oFZ1jhY6wxbq4RmVl6vtREhis5uoL2Yx/view?usp=sharing">
-          <img src="../images//Rand+work+display.png">
+          <img src="../images/Rand+work+display.png">
         </a>
         <p>
-          I designed and scaled Rand Technology's booth for the 2024 Binational Electronics Show in Chihuahua, Mexico, using Adobe Illustrator to create a cohesive and impactful visual presence. The purposeful design and messaging has allowed for reuse across other international auto shows attended by the company. I also assisted with assets for the Electronica trade show in Munich, Germany.
+          I create go-to-market materials—including website copy, sales presentations, one-pagers, case studies, and social media graphics—to help Rand establish a consistent and modern brand identity. This includes redesigning outdated presentation decks and developing polished internal and external assets tailored for industry professionals at Tier 1 tech companies.
         </p>
         <a href="https://drive.google.com/file/d/1oFZ1jhY6wxbq4RmVl6vtREhis5uoL2Yx/view?usp=sharing" class="work-exp-see-more">
           See more
