Reactive styling for mobile phone

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <section class="home">
       <div class="home-content">
         <h1>Victoria Hill</h1>
+        <img id="vheadshot-phone" src="images/VHeadshot.png">
         <p>
           I'm a creative marketing professional passionate about creative storytelling that engages audiences and drives brand growth.
         </p>
