--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>
           I'm a creative marketing professional passionate about creative storytelling that engages audiences and drives brand growth.
         </p>
-        <a href="https://drive.google.com/file/d/1FoQHJfcXrxNrpBgHFAtSJker6TM8D4kI/view?usp=sharing" class="resume-btn">Resume</a>
+        <a href="https://drive.google.com/file/d/1FoQHJfcXrxNrpBgHFAtSJker6TM8D4kI/view?usp=sharing" class="resume-btn" target="_blank">Resume</a>
       </div>
       <img id="vheadshot" src="images/VHeadshot.png">
     </section>
@@ -150,13 +150,13 @@
       <div class="cert-info">
         <div class="single-certi">
           <p>Google Analytics</p>
-          <a href="https://skillshop.credential.net/e88ec177-6770-43ed-a451-d36ddc1b0ddb#acc.OLPSVGie">
+          <a href="https://skillshop.credential.net/e88ec177-6770-43ed-a451-d36ddc1b0ddb#acc.OLPSVGie" target="_blank">
             <img src="images/GOOGLE_Analytics-Certi.png">
           </a>
         </div>
         <div class="single-certi">
           <p>Google Ads Search</p>
-          <a href="https://skillshop.credential.net/ef4a36a1-1146-41cd-9f8e-3bc0b4c86087#acc.tXGPgnj6">
+          <a href="https://skillshop.credential.net/ef4a36a1-1146-41cd-9f8e-3bc0b4c86087#acc.tXGPgnj6" target="_blank">
             <img src="images/GOOGLE_Ads-Search-Certi.png">
           </a>
         </div>
