--- a/pages/kutv-2news.html
+++ b/pages/kutv-2news.html
@@ -53,13 +53,13 @@
         <h2>
           News article samples
         </h2>
-        <a href="https://drive.google.com/file/d/1X9RFZf0tI710TisZg9JGf30DLxEEH_Kr/view?usp=sharing">
+        <a href="https://drive.google.com/file/d/1X9RFZf0tI710TisZg9JGf30DLxEEH_Kr/view?usp=sharing" target="_blank">
           <img src="../images/one+sheets+mock+display.png">
         </a>
         <p>
           I wrote and assisted reporters with dozens of stories each week in a top 30 media market, managing high-stress situations and tight deadlines. My coverage ranged from local successes to in-depth investigative pieces, reaching audiences across Utah and beyond. Every story required sharp writing, clear communication, and a commitment to accuracy, all while optimizing content for digital platforms.
         </p>
-        <a href="https://drive.google.com/file/d/1X9RFZf0tI710TisZg9JGf30DLxEEH_Kr/view?usp=sharing" class="work-exp-see-more">
+        <a href="https://drive.google.com/file/d/1X9RFZf0tI710TisZg9JGf30DLxEEH_Kr/view?usp=sharing" class="work-exp-see-more" target="_blank">
           See more
         </a>
       </div>
@@ -68,13 +68,13 @@
         <h2>
           Social media success
         </h2>
-        <a href="https://drive.google.com/file/d/1X9RFZf0tI710TisZg9JGf30DLxEEH_Kr/view?usp=sharing">
+        <a href="https://drive.google.com/file/d/1X9RFZf0tI710TisZg9JGf30DLxEEH_Kr/view?usp=sharing" target="_blank">
           <img src="../images/one+sheets+mock+display+(1).png">
         </a>
         <p>
           I engaged with over 400k combined followers, creating multimedia content for Facebook, X, Instagram, YouTube, TikTok, and Threads. By optimizing posts and analyzing performance metrics, I helped grow KUTV's YouTube page from 1.3 million to 35.6 million video views in just one year. Within my first four months, I also took initiative to launch KUTV's TikTok page, which now has nearly 10 million likes.
         </p>
-        <a href="https://drive.google.com/file/d/1X9RFZf0tI710TisZg9JGf30DLxEEH_Kr/view?usp=sharing" class="work-exp-see-more">
+        <a href="https://drive.google.com/file/d/1X9RFZf0tI710TisZg9JGf30DLxEEH_Kr/view?usp=sharing" class="work-exp-see-more" target="_blank">
           See more
         </a>
       </div>
