--- a/pages/rand-technology.html
+++ b/pages/rand-technology.html
@@ -53,13 +53,13 @@
         <h2>
           Trade show support
         </h2>
-        <a href="https://drive.google.com/file/d/1WiBwo-z6MLE7BCBeLhXfergUuFWuTHZP/view?usp=sharing">
+        <a href="https://drive.google.com/file/d/1WiBwo-z6MLE7BCBeLhXfergUuFWuTHZP/view?usp=sharing" target="_blank">
           <img src="../images/binational+electronics+show+booth.png">
         </a>
         <p>
           I designed and scaled Rand Technology's booth for the 2024 Binational Electronics Show in Chihuahua, Mexico, using Adobe Illustrator to create a cohesive and impactful visual presence. The purposeful design and messaging has allowed for reuse across other international auto shows attended by the company. I also assisted with assets for the Electronica trade show in Munich, Germany.
         </p>
-        <a href="https://drive.google.com/file/d/1WiBwo-z6MLE7BCBeLhXfergUuFWuTHZP/view?usp=sharing" class="work-exp-see-more">
+        <a href="https://drive.google.com/file/d/1WiBwo-z6MLE7BCBeLhXfergUuFWuTHZP/view?usp=sharing" class="work-exp-see-more" target="_blank">
           See more
         </a>
       </div>
@@ -68,13 +68,13 @@
         <h2>
           Go-to-market materials
         </h2>
-        <a href="https://drive.google.com/file/d/1oFZ1jhY6wxbq4RmVl6vtREhis5uoL2Yx/view?usp=sharing">
+        <a href="https://drive.google.com/file/d/1oFZ1jhY6wxbq4RmVl6vtREhis5uoL2Yx/view?usp=sharing" target="_blank">
           <img src="../images/Rand+work+display.png">
         </a>
         <p>
           I create go-to-market materials—including website copy, sales presentations, one-pagers, case studies, and social media graphics—to help Rand establish a consistent and modern brand identity. This includes redesigning outdated presentation decks and developing polished internal and external assets tailored for industry professionals at Tier 1 tech companies.
         </p>
-        <a href="https://drive.google.com/file/d/1oFZ1jhY6wxbq4RmVl6vtREhis5uoL2Yx/view?usp=sharing" class="work-exp-see-more">
+        <a href="https://drive.google.com/file/d/1oFZ1jhY6wxbq4RmVl6vtREhis5uoL2Yx/view?usp=sharing" class="work-exp-see-more" target="_blank">
           See more
         </a>
       </div>
